--- a/package.json
+++ b/package.json
@@ -3,7 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@dimforge/rapier3d-compat": "^0.12.0",
+    "@react-three/cannon": "^6.6.0",
     "@react-three/drei": "^9.101.0",
+    "@react-three/fiber": "^8.16.2",
+    "@react-three/rapier": "^1.3.1",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
